Bug 1033910 - Enable RTSP capability while using android::MediaCodec. r=cpearce