content/media/omx/MediaCodecReader.cpp
@@ -196,6 +196,7 @@ MediaCodecReader::CodecBufferInfo::CodecBufferInfo()
 MediaCodecReader::MediaCodecReader(AbstractMediaDecoder* aDecoder)
   : MediaOmxCommonReader(aDecoder)
   , mColorConverterBufferSize(0)
+  , mExtractor(nullptr)
 {
   mHandler = new MessageHandler(this);
   mVideoListener = new VideoResourceListener(this);
